--- a/index.html
+++ b/index.html
@@ -1,68 +1,115 @@
 <html>
   <head>
     <title>BudgetSheet</title>
-    <link rel="shortcut icon" href="https://cdn.glitch.com/1cde7807-e2c1-4ee9-82f4-1f7665847535%2Ffavicon.png?1543100949592" />
+    <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="css/spectre.min.css">
+    <link rel="stylesheet" href="css/budgetsheet.css">
   </head>
 
   <body>
     <header class="navbar">
       <section class="navbar-section">
-        <a href="/" class="navbar-brand mr-2">BudgetSheet</a>
-      </section>
-      <section class="navbar-section">
-        <a href="/">Link</a>
+        <a href="/" class="navbar-brand mr-2"><img src="favicon.png" /> BudgetSheet</a>
       </section>
     </header>
 
-    <div class="container">
-      <div class="columns">
-        <div class="column">
-
-          <!-- link form -->
-          <div class="card">
-            <div class="card-body">
-              <p>
-                Live banking data comes from your <a href="https://dashboard.plaid.com/account/keys">Plaid Account</a>.
-                In order to get a <code>public_token</code> for your spreadsheet, please enter your
-                <code>public_key</code> below.
-              </p>
-              <form method="post" id="plaid-link-form">
-                <div class="form-group">
-                  <label class="form-label" for="PLAID_PUBLIC_KEY">Plaid <code>public_key</code></label>
-                  <input class="form-input" type="text" name="PLAID_PUBLIC_KEY" id="PLAID_PUBLIC_KEY" placeholder="">
-                </div>
-                <div class="form-group">
-                  <label class="form-label">Environment</label>
-                  <label class="form-radio">
-                    <input type="radio" name="PLAID_ENV" value="sandbox" checked>
-                    <i class="form-icon"></i> Sandbox (test bank data, fake logins)
-                  </label>
-                  <label class="form-radio">
-                    <input type="radio" name="PLAID_ENV" value="development">
-                    <i class="form-icon"></i> Development (live bank data, real logins)
-                  </label>
-                </div>
-                <button class="btn btn-primary" type="submit">Link Account</button>
-              </form>
-              <p>
-                <small>For your convenience, these values are stored on your computer in your browser's localStorage on
-                  submit (so you can link multiple accounts without entering these values each time). If you do not
-                  want these stored even on your own computer, you can
-                  <a href="#" id="localStorage-clear">clear these values now</a>.</small>
-              </p>
-            </div>
+    <div class="section-hero bg-hero">
+      <div class="container">
+        <div class="columns">
+          <div class="column text-center">
+            <h1>The Budgeting Spreadsheet With Live Banking Data</h1>
+            <h3>Google Sheets + Live Bank Transaction Imports</h3>
+            <p>No more manual exports or copying &amp; pasting from CSV files</p>
+            <p>&nbsp;</p>
+            <p><strong>Coming soon to the G Suite Marketplace</strong></p>
           </div>
+        </div>
+      </div>
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 1920 152.8" class="svg-wave" xmlnsXlink="http://www.w3.org/1999/xlink" enableBackground="new 0 0 1920 152.8" xmlSpace="preserve"><path d="M1,152.4v-61c0,0,257.3,56.4,431,44c260.8-18.7,490.2-63.1,647-97c496.4-107.3,842,42,842,42v72H1z" class="wave-path"></path></svg>
+    </div>
 
-          <p>
-            Public Token: <code id="result-public-token"></code>
-          </p>
-
+    <div class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div class="section-heading">
+              <h2>See It In Action:</h2>
+            </div>
+            <figure class="figure">
+              <img class="img-responsive p-centered" src="img/BudgetSheet-Example1.gif" alt="GIF of BudgetSheet fetching new bank transaction data within a user specified date range" />
+              <figcaption class="figure-caption text-center">After one or more accounts are linked, new bank transactions can be imported at any time.</figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
-    <script src="js/index.js" defer></script>
+    <div class="section section-steps bg-gray">
+      <div class="section-heading">
+        <h2>How It Works:</h2>
+      </div>
+      <div class="container grid-lg">
+        <div class="columns">
+          <div class="column text-center col-md-12">
+            <p><span class="step-number">1</span> Enter your <a href="https://plaid.com" rel="nofollow">Plaid.com</a> API keys into the <code>SETTINGS</code> spreadsheet.</p>
+          </div>
+          <div class="column text-center col-md-12">
+            <p><span class="step-number">2</span> Link your bank account(s) via the menu:<br /><code>Add-ons &gt; BudgetSheet.net &gt; Link New Account...</code></p>
+          </div>
+          <div class="column text-center col-md-12">
+            <p><span class="step-number">3</span> Import bank transactions directly into your spreadsheet via the menu:<br /><code>Add-ons &gt; BudgetSheet.net &gt; Fetch Latest Bank Transactions</code></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div class="section-heading">
+              <h2>Interested?</h2>
+              <p>Enter your email below to be notified when the Add-on is available in the G Suite Marketplace:</p>
+            </div>
+            <div>
+              <!-- Begin Mailchimp Signup Form -->
+              <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+              <style type="text/css">
+#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+                <form action="https://actridge.us1.list-manage.com/subscribe/post?u=de8a93cc6b38747284c972ef1&amp;id=f81694098b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+                    <div class="mc-field-group">
+                      <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                      </label>
+                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-FNAME">First Name </label>
+                      <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-LNAME">Last Name </label>
+                      <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+                    </div>
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display:none"></div>
+                      <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_de8a93cc6b38747284c972ef1_f81694098b" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+                </form>
+              </div>
+              <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+              <!--End mc_embed_signup-->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
