--- a/index.html
+++ b/index.html
@@ -71,42 +71,22 @@
               <h2>Interested?</h2>
               <p>Enter your email below to be notified when the Add-on is available in the G Suite Marketplace:</p>
             </div>
-            <div>
-              <!-- Begin Mailchimp Signup Form -->
-              <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-              <style type="text/css">
-#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-              </style>
-              <div id="mc_embed_signup">
-                <form action="https://actridge.us1.list-manage.com/subscribe/post?u=de8a93cc6b38747284c972ef1&amp;id=f81694098b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll">
-                    <div class="mc-field-group">
-                      <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-                      </label>
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                    </div>
-                    <div class="mc-field-group">
-                      <label for="mce-FNAME">First Name </label>
-                      <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-                    </div>
-                    <div class="mc-field-group">
-                      <label for="mce-LNAME">Last Name </label>
-                      <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-                    </div>
-                    <div id="mce-responses" class="clear">
-                      <div class="response" id="mce-error-response" style="display:none"></div>
-                      <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_de8a93cc6b38747284c972ef1_f81694098b" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                  </div>
-                </form>
-              </div>
-              <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-              <!--End mc_embed_signup-->
+            <div class="signup-form">
+              <form action="https://actridge.us1.list-manage.com/subscribe/post?u=de8a93cc6b38747284c972ef1&amp;id=f81694098b" class="p-centered" method="post" target="_blank">
+                <input type="email" name="EMAIL" placeholder="user@example.com">
+                <input type="submit" class="btn btn-success" value="Subscribe">
+              </form>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section bg-gray">
+      <div class="container grid-lg">
+        <div class="columns">
+          <div class="column text-center col-md-12">
+            <p>BudgetSheet is a project by <a href="http://vancelucas.com">Vance Lucas</a>.</p>
           </div>
         </div>
       </div>
