Update header colors, responsive images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="column text-center">
             <h1>The Budgeting Spreadsheet With Live Banking Data</h1>
             <h3>Google Sheets + Live Bank Transaction Imports</h3>
-            <p>No more manual exports or copying &amp; pasting from CSV files</p>
+            <h4>No more manual exports or copying &amp; pasting from CSV files</h4>
             <p>&nbsp;</p>
             <p><strong>Coming soon to the G Suite Marketplace</strong></p>
           </div>
