Minor styling updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="section-hero bg-hero">
       <div class="container">
         <div class="columns">
-          <div class="column text-center">
+          <div class="column text-center hero-text">
             <h1>The Budgeting Spreadsheet With Live Banking Data</h1>
             <h3>Google Sheets + Live Bank Transaction Imports</h3>
             <h4>No more manual exports or copying &amp; pasting from CSV files</h4>
