Add TOS and Privacy Policy

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="container grid-lg">
         <div class="columns">
           <div class="column text-center col-md-12">
-            <p>BudgetSheet is a project by <a href="http://vancelucas.com">Vance Lucas</a>.</p>
+            <p>BudgetSheet is a project by <a href="http://vancelucas.com">Vance Lucas</a> of <a href="http://actridge.com">Actridge, LLC</a>.</p>
           </div>
         </div>
       </div>
