Privacy and TOS updates

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>BudgetSheet</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="css/spectre.min.css">
@@ -87,6 +88,8 @@
         <div class="columns">
           <div class="column text-center col-md-12">
             <p>BudgetSheet is a project by <a href="http://vancelucas.com">Vance Lucas</a> of <a href="http://actridge.com">Actridge, LLC</a>.</p>
+            <p><a href="privacy.html">Privacy Policy</a> | <a href="tos.html">Terms of Service</a></p>
+            <p>Questions? <a href="mailto:info@actridge.com">info@actridge.com</a></p>
           </div>
         </div>
       </div>
