--- a/tos.html
+++ b/tos.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>BudgetSheet</title>
+    <meta charset="UTF-8">
+    <title>Terms of Service - BudgetSheet</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="css/spectre.min.css">
     <link rel="stylesheet" href="css/budgetsheet.css">
