--- a/googledb5cdb2f2d477e17.html
+++ b/googledb5cdb2f2d477e17.html
@@ -1,2 +1,1 @@
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252"></head><body>google-site-verification: googledb5cdb2f2d477e17.html</body></html>
+google-site-verification: googledb5cdb2f2d477e17.html
