Add link to GAM listing 🎉

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>BudgetSheet</title>
+    <title>BudgetSheet - The Budget Spreadsheet</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="css/spectre.min.css">
     <link rel="stylesheet" href="css/budgetsheet.css">
@@ -22,7 +22,7 @@
             <h3>Google Sheets + Live Bank Transaction Imports</h3>
             <h4>No more manual exports or copying &amp; pasting from CSV files</h4>
             <p>&nbsp;</p>
-            <p><strong>Coming soon to the G Suite Marketplace</strong></p>
+            <p><a class="btn btn-lg" href="https://gsuite.google.com/marketplace/app/budgetsheet/922376225939">View on Google Apps Marketplace</a></p>
           </div>
         </div>
       </div>
@@ -69,8 +69,8 @@
         <div class="columns">
           <div class="column">
             <div class="section-heading">
-              <h2>Interested?</h2>
-              <p>Enter your email below to be notified when the Add-on is available in the G Suite Marketplace:</p>
+              <h2>Want Updates?</h2>
+              <p>Enter your email below and we'll send you an email when we release new versions!</p>
             </div>
             <div class="signup-form">
               <form action="https://actridge.us1.list-manage.com/subscribe/post?u=de8a93cc6b38747284c972ef1&amp;id=f81694098b" class="p-centered" method="post" target="_blank">
