Add spacing after button for Firefox issue

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h4>No more manual exports or copying &amp; pasting from CSV files</h4>
             <p>&nbsp;</p>
             <p><a class="btn btn-lg" href="https://chrome.google.com/webstore/detail/budgetsheet/ddihilbannlmflanflegdhlamkmmhhac">View on Google Chome Web Store</a></p>
+            <p>&nbsp;</p>
           </div>
         </div>
       </div>
